﻿Version 2.1

- Add mod options panel setting for plain or skybox thumbnail backgrounds
- Add mod options panel setting for extra debugging logging and reduce default logging detail
- Add mod options panel button to regenerate building buttons
- Adjust render lighting angle to reduce effects of themes with over-saturated light
- Override theme exposure and sky tint when rendering previews
- Use first submesh as render mesh when it has more tris than main mesh
- Wait until confirmation level is fully loaded before generating thumbnails
- Force override of thumbnail tooltips on display (to ensure nothing else is overriding them)
- Only force building household count updates when actual counts differ from specified
- Use EnableCitizenUnits reverse redirect to reallocate household counts where actual counts are lower than specified
- Add dynamic positioning of settings button in building info panels; aligns with Repaint color patch
- Store building buttons directly in BuildingData record
- Lower z-order of notification panels (to put them behind everything else)


Version 2.0.3

- Ensure Dummy AI initialises with beautification service
- Catch NullReferenceException on building button tooltip creation if another mod is interfering with AI
- Increase InitPrefab patch priority


Version 2.0.2

- Delete building button when local settings are removed and no other settings remain
- Fix building button not being deleted when a UI category change is saved and then applied
- Reset camera flags before rendering preview thumbnails
- Fix transposition of 'tourism' and 'leisure' items in some settings menus
- Add explicit Harmony Prefix prioritisation over Prefab Hook


Version 2.0.1

-  Tweak Harmony 2.0 installing and patching.


Version 2.0

- Process overhaul: load and apply RICO settings before game prefab initialisation by patching BuildingInfo.InitializePrefab(), instead of modifying post-initialisation
- Implement growables